# resonance

./: .gitignore  .prettierignore  .prettierrc  CLAUDE.md  LICENSE  README.md  SCRIPTS.md  build.js  collection-runner.html  cookie-jar.html  customers-test.yaml  documentation.html  eslint.config.js  forge.config.js  grpc.html  index.html  jest.config.cjs  jest.config.js  jest.e2e.config.cjs  jest.setup.js  jsdoc.json  main.js  mock-server.html  mqtt.html  package-lock.json  package.json  playwright.config.js  preload.js  renderer.js  sample-api.yaml  script.js  scripts.html  serve.js  sse.html  style.css  styles.css  test-api.yaml  test-schema.yaml  test-variables.js  websocket.html
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
assets/: sample-api.postman.json  sample-api.yaml
assets/appdata/: io.github.db_mobile.resonance.metainfo.xml
assets/desktop/: com.dbmobile.resonance.desktop  io.github.db_mobile.resonance.desktop
assets/icons/: icon.icns
assets/ui/: LICENSE
assets/winget-manifests/: db-mobile.Resonance.installer.yaml  db-mobile.Resonance.locale.en-US.yaml  db-mobile.Resonance.yaml
coverage/: clover.xml  coverage-final.json  index.html  lcov.info
coverage/lcov-report/: index.html
coverage/lcov-report/i18n/: I18nManager.js.html  index.html  index.js.html
coverage/lcov-report/modules/: apiHandler.js.html  collectionManager.js.html  domElements.js.html  httpVersionManager.js.html  index.html  keyValueManager.js.html  resizer.js.html  statusDisplay.js.html  tabManager.js.html  themeManager.js.html
coverage/lcov-report/src/: index.html  renderer.js.html
coverage/src/: index.html  renderer.js.html
coverage/src/i18n/: I18nManager.js.html  index.html  index.js.html
coverage/src/main/: apiRequestHandlers.js.html  index.html  openApiParser.js.html  proxyHandlers.js.html  schemaProcessor.js.html  (+2 more)
data/: spryker_rest_api.schema.yml  test-nested-schema.json
docs/: ARCHITECTURE.md  JSDOC_STYLE_GUIDE.md  LOGGING.md
flatpak/: com.dbmobile.resonance.yml  io.github.db_mobile.resonance.yml
packaging/flatpak/: io.github.db_mobile.resonance.metainfo.xml
packaging/homebrew/: resonance.rb
scripts/: regenerate-icons.sh
snap/: snapcraft.yaml
src/: main.js  preload.js  renderer.js  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/proto/google/protobuf/: descriptor.proto
src-tauri/proto/grpc/reflection/v1/: reflection.proto
src-tauri/proto/grpc/reflection/v1alpha/: reflection.proto
src-tauri/src/: main.rs
src-tauri/src/commands/: api_request.rs  app.rs  certificates.rs  collections.rs  graphql_subscription.rs  grpc_proto.rs  grpc_reflection.rs  grpc_streaming.rs  import_export.rs  mock_server.rs  mod.rs  mqtt.rs  oauth.rs  proxy.rs  scripts.rs  secrets.rs  sse.rs  store.rs  tls.rs  updater.rs  websocket.rs
src-tauri/src/commands/import_export/: export.rs  openapi.rs  postman.rs  storage.rs
src/__tests__/: sample.test.js
src/i18n/: I18nManager.js  index.js
src/main/: apiRequestHandlers.js  digestAuthHandler.js  mockServerHandler.js  openApiExporter.js  openApiParser.js  postmanParser.js  proxyHandlers.js  schemaProcessor.js  scriptExecutor.js  scriptHandlers.js  storeHandlers.js  windowManager.js
src/modules/: CurlParser.js  PreviewManager.js  ResponseContainerManager.js  ResponseDisplayHelper.js  WorkspaceTabStateManager.js  apiHandler.js  appContext.js  authManager.js  certificate.feature.js  codeGenerator.js  collectionManager.js  cookie.feature.js  cookieParser.js  copyHandler.js  curlGenerator.js  domElements.js  editorLoader.js  editorTheme.js  environment.feature.js  formBodyManager.js  graphqlBodyManager.js  graphqlEditor.js  graphqlExplorer.js  graphqlSubscriptionHandler.js  graphqlTransportWs.js  graphqlTypeUtils.js  grpcHandler.js  grpcStreamHandler.js  history.feature.js  htmlUtils.js  httpVersionManager.js  ipcBridge.js  jsonEditor.js  keyValueManager.js  keyboardShortcuts.js  logger.js  mockServer.feature.js  mqttHandler.js  performanceMetrics.js  proxy.feature.js  (+19 more)
src/services/: LoggerService.js
src/styles/: base.css  icons.css  main.css  reset.css  tokens.css  typography.css
src/themes/: README.md  _base-overrides.css  black.css  blueprint.css  dark-theme-test.html  dark.css  light.css  system.css
tests/: codeGenerator.test.js  digestAuthHandler.test.js  formDataRows.test.js  grpcHostForCertLookup.test.js  htmlUtils.test.js  setup.js
tests/auth/: authInheritance.test.js  authSecrets.test.js
tests/controllers/: WorkspaceTabController.teardown.test.js
tests/e2e/: app.spec.js  globalSetup.js  globalTeardown.js  setup.js
tests/graphql/: graphqlExplorer.test.js  graphqlExplorerView.test.js  graphqlTransportWs.test.js
tests/integration/: ipc.test.js
tests/main/: apiRequestHandlers.test.js  openApiParser.test.js  postmanParser.test.js
tests/runner/: RunnerController.test.js  RunnerRepository.test.js  RunnerService.test.js
tests/schema/: SchemaProcessor.test.js
tests/services/: CertificateService.test.js  CollectionRequestPersistenceService.test.js  CookieJarService.test.js  DocGeneratorService.test.js  RequestBuilderService.test.js  VariableService.test.js
tests/storage/: CertificateRepository.test.js  CollectionRepository.authSecrets.test.js  CollectionRepository.test.js  EnvironmentRepository.secrets.test.js  EnvironmentRepository.test.js  HistoryRepository.test.js  SecretStore.keychain.test.js  SecretStore.test.js  VariableRepository.secrets.test.js  VariableRepository.test.js  WorkspaceTabRepository.test.js
tests/variables/: DynamicVariableGenerator.test.js  VariableProcessor.test.js
(+326 files in other folders)
