[package]
name = "resonance"
version = "2.0.0"
description = "A local-first, zero-account API client with excellent user experience"
authors = ["Dennis Blümer <dennis.bluemer@ducart.de>"]
license = "MIT"
repository = "https://github.com/db-mobile/resonance"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2", "gzip", "brotli", "socks"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"

# Mock server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# TLS for connection timing measurement
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "0.26"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1"
url = "2"

# Digest auth
md5 = "0.7"
sha2 = "0.10"
hex = "0.4"

# JavaScript engine for script execution
boa_engine = "0.19"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
