[package]
name = "resonance"
version = "2.12.4"
description = "A local-first, zero-account API client with excellent user experience"
authors = ["Dennis Blümer <dennis.bluemer@ducart.de>"]
license = "MIT"
repository = "https://github.com/db-mobile/resonance"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.11"
protoc-bin-vendored = "3"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "http2", "gzip", "brotli", "socks"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
# MQTT client (async, rustls to match project TLS stack — no OpenSSL)
rumqttc = { version = "0.25", default-features = false, features = ["use-rustls"] }

# gRPC client
tonic = { version = "0.11", default-features = false, features = ["codegen", "prost", "transport", "tls", "tls-roots"] }
prost = "0.12"
prost-types = "0.12"
tokio-stream = { version = "0.1", features = ["sync"] }
prost-reflect = { version = "0.12", features = ["serde"] }
bytes = "1"
http = "0.2"
base64 = "0.21"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"

# Mock server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# TLS for connection timing measurement
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "0.26"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
regex = "1"
url = "2"

# Digest auth + AWS Signature V4
md5 = "0.7"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# Proto file parsing
which = "6"
protoc-bin-vendored = "3"

# JavaScript engine for script execution
boa_engine = "0.19"

# OS keychain for secret storage (encryption at rest). Pinned OpenSSL-free to match the
# project's rustls/ring-only TLS stack: Linux uses the D-Bus Secret Service with RustCrypto
# (zbus, no OpenSSL); macOS/Windows use their native credential stores.
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }
# Secret portal backend, used only when running inside a Flatpak sandbox so the app can
# encrypt secrets at rest without a `--talk-name=org.freedesktop.secrets` permission
# (which flags the app as using a non-portal service on Flathub). `native_crypto` is the
# RustCrypto backend (the `openssl_crypto` feature is the OpenSSL one) — keep it that way
# to match the project's OpenSSL-free tree; verify with `cargo tree -i openssl-sys`.
oo7 = { version = "0.3", default-features = false, features = ["tokio", "native_crypto"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", default-features = false, features = ["windows-native"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"    # Optimize for binary size
lto = true         # Link-time optimization
codegen-units = 1  # Maximize cross-module optimization (slower compile)
strip = true       # Strip symbols from the binary
# panic = "abort" intentionally omitted: the Boa script sandbox relies on
# unwinding worker-thread panics, which abort would escalate to a full crash.
